fix: Vertical alignment of dropdown caret #82

--- a/src/scss/components/_components.sidebar.scss
+++ b/src/scss/components/_components.sidebar.scss
@@ -81,7 +81,6 @@
       // dropdown caret
       a:first-of-type {
         opacity: 1;
-        margin-top: -3px;
         padding-right: 0;
       }
     }
